улучшена загрузка изображений